--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <!-- git commit test marco -->
         <title>Mrjibo</title>
         <link rel="stylesheet" type="text/css" href="styles/main.css" />
     </head>
